@@ -15,6 +15,10 @@
  *
  * @package setup
  */
+if ($install->isLocked()) {
+    return $parser->render('locked.tpl');
+}
+
 $install->settings->check();
 $default_folder_permissions = sprintf("%04o", 0777 & (0777 - umask()));
 $default_file_permissions = sprintf("%04o", 0666 & (0666 - umask()));
