@@ -104,6 +104,8 @@ class modInstallRunnerWeb extends modInstallRunner {
             ),
         ));
 
+        $this->install->lock();
+
         $this->install->settings->store(array(
             'finished' => true,
         ));
