@@ -1,0 +1,5 @@
+<div>
+    <h2>{$_lang.locked}</h2>
+    {$_lang.locked_message}
+    <br />
+</div>
